WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278004
[visionOS] Environment docking may fail if a video's src changes while in element fullscreen
https://bugs.webkit.org/show_bug.cgi?id=278004
Summary
[visionOS] Environment docking may fail if a video's src changes while in ele...
Andy Estes
Reported
2024-08-12 20:36:23 PDT
SSIA
Attachments
Add attachment
proposed patch, testcase, etc.
Andy Estes
Comment 1
2024-08-12 20:36:24 PDT
Comment hidden (obsolete)
<
rdar://problem/133718197
>
Andy Estes
Comment 2
2024-08-12 20:55:29 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32098
Andy Estes
Comment 3
2024-08-12 21:00:01 PDT
rdar://130920037
EWS
Comment 4
2024-08-13 11:23:15 PDT
Committed
282176@main
(8da9da634316): <
https://commits.webkit.org/282176@main
> Reviewed commits have been landed. Closing PR #32098 and removing active labels.
EWS
Comment 5
2024-08-30 13:26:24 PDT
Committed
280938.293@safari-7619-branch
(8cb5e97761b4): <
https://commits.webkit.org/280938.293@safari-7619-branch
> Reviewed commits have been landed. Closing PR #1683 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug