Source/WebKit/Platform/ios/VideoPresentationInterfaceLMK.mm
@@ -118,6 +118,7 @@ void VideoPresentationInterfaceLMK::setupPlayerViewController()
 
 void VideoPresentationInterfaceLMK::invalidatePlayerViewController()
 {
+    ALWAYS_LOG_IF_POSSIBLE(LOGIDENTIFIER);
     m_playerViewController = nil;
 }
 
@@ -209,6 +210,7 @@ void VideoPresentationInterfaceLMK::ensurePlayableViewController()
     if (m_playerViewController)
         return;
 
+    ALWAYS_LOG_IF_POSSIBLE(LOGIDENTIFIER);
     m_playerViewController = [linearMediaPlayer() makeViewController];
     [m_playerViewController view].alpha = 0;
 }
